# STIN-payment-system

./: Cargo.toml  README.md
.github/workflows/: ci.yml  codecov.ayml  rust.yml
src/: enums.rs  lib.rs  main.rs  utils.rs
src/controllers/: payment_controller.rs
src/handlers/: card_payment_handler.rs  cash_payment_handler.rs  mod.rs
src/models/: payment_request.rs
src/services/: payment_service.rs
tests/: payment_controller_tests.rs
