[package]
name = "stin_payment_program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
chrono = { version = "0.4.37", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
